Safe mode opt in at registration
Allows the user to opt in to safe mode at account creation time.

--- a/openlibrary/templates/account/create.html
+++ b/openlibrary/templates/account/create.html
@@ -55,6 +55,11 @@ $else:
             $:form.ia_newsletter.render() $:form.ia_newsletter.description
         </label>
 
+        <br/>
+        <label>
+            $:form.safe_mode.render() $:form.safe_mode.description
+        </label>
+
         <hr/>
 
         $if form.has_recaptcha:
